# PyCast

./: .gitignore  .gitignore.swp  .gitignore~  .travis.yml  CONTRIBUTORS.md  Podcasts.csv  PyCast.py  README.md  create_db.py  dbc.py  dbconnect.py  feed_list.db  feed_teste2def.py  main.py  pyproject.toml  requirements.txt
.venvteste/lib/python-wheels/: distlib-0.2.1-py2.py3-none-any.whl  requests-2.9.1-py2.py3-none-any.whl  setuptools-18.8-py2.py3-none-any.whl  six-1.10.0-py2.py3-none-any.whl  urllib3-1.13.1-py2.py3-none-any.whl
XMLCSV/: OPML.py  XMLdata.py  csv_import.py
modulos/: csv_import.py  dbc.py  modulos_main.py
pycast/: action.py  exception.py  feed.py  opml.py  rss.py
tests/: test_feed.py
