[tool.poetry]
name = "pycast"
version = "0.9.1"
description = "CLI Podcast Downloader"
authors = ["Elton de Andrade Rodrigues <eltonrodrigues61@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
feedparser = "^5.2.1"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
